--- a/my-website/package.json
+++ b/my-website/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-website",
   "version": "0.1.0",
+  "homepage": "https://mcdialing14.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
